Fix issue with .wrap css

--- a/app/static/features/rules-based-order/_styles.sass
+++ b/app/static/features/rules-based-order/_styles.sass
@@ -1,8 +1,4 @@
-@import app/static/features/rules-based-order/style/_cards.sass
 @import app/static/features/rules-based-order/style/_vars.sass
-@import app/static/features/rules-based-order/style/_helpers.sass
-@import app/static/features/rules-based-order/style/_header.sass
-@import app/static/features/rules-based-order/style/_history.sass
 
 // EMBARGO MODAL: TO BE REMOVED
 #embargo
@@ -65,6 +61,7 @@ blockquote
 .intro-txt h2,
 .themes-txt h2
   margin-top: 2em
+  font-weight: 500
 
 .intro-txt blockquote
   padding: 0 2.5em 0 1.5em
