--- a/app/static/features/rules-based-order/style/_history.sass
+++ b/app/static/features/rules-based-order/style/_history.sass
@@ -128,10 +128,3 @@
     padding: 0
   .event:after
     display: none
-
-  .skinny-scrollbar
-    scrollbar-height: 0 /* Firefox */
-    ms-overflow-style: none  /* IE 10+ */
-    &::-webkit-scrollbar
-      height: 0
-      background: transparent /* Chrome/Safari/Webkit */
